analysis_mean_mode_max
calculations complete for generic case and split by a certain column. now it should be generalised to take variable column and split by it

--- a/Code/cleaning.ipynb
+++ b/Code/cleaning.ipynb
@@ -4,22 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In order to run the code that does the basic steps run the cells numbered with hashtags"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "First the imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#1\n",
     "import os \n",
-    "import shutil # to copy files across directories\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import csv\n",
-    "import calendar"
+    "import calendar\n",
+    "\n",
+    "from statistics import mean, mode"
    ]
   },
   {
@@ -43,6 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#2\n",
     "# returns a dictionary containing the data from the .csv files\n",
     "def read_data(dir):\n",
     "    dfs = {}\n",
@@ -68,10 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#3\n",
     "original_dir = \"../../BikeShareData/OriginalData\"\n",
     "data = read_data(original_dir)"
    ]
@@ -677,10 +688,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#4\n",
     "def count_entries(dataset, file_name, flag):\n",
     "    with open(file_name, 'w', newline='') as file:\n",
     "        writer = csv.writer(file)\n",
@@ -706,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -730,6 +742,7 @@
     }
    ],
    "source": [
+    "#5\n",
     "count_entries(data, \"BikeRides_Original.csv\", False)"
    ]
   },
@@ -779,11 +792,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "#6\n",
     "def check_NAN(dataset, filename):\n",
     "    with open(filename, 'w', newline='') as file:\n",
     "        writer = csv.writer(file)\n",
@@ -804,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -832,6 +845,7 @@
     }
    ],
    "source": [
+    "#7\n",
     "check_NAN(data, \"NaN_Percentages_Orig.csv\")"
    ]
   },
@@ -844,10 +858,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#8\n",
     "# 1st phase of clean data with the ended_before_started column to be able to see and count the entries where this is True\n",
     "def clean_data1(dataset):\n",
     "    col_to_drop = ['ride_id', 'start_station_name', 'start_station_id', 'end_station_name', 'end_station_id', 'start_lat', 'start_lng', 'end_lat', 'end_lng']\n",
@@ -872,10 +887,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#9\n",
     "cleaned_data1, ended_before_started = clean_data1(data)"
    ]
   },
@@ -1142,10 +1158,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#10\n",
     "#2nd version of clean data that will drop the rows where ended > started\n",
     "def clean_data2(dataset, flag):\n",
     "    clean_data = {}\n",
@@ -1158,16 +1175,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#11\n",
     "cleaned_data = clean_data2(cleaned_data1, ended_before_started)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1191,13 +1209,14 @@
     }
    ],
    "source": [
+    "#12\n",
     "# check no of columns and entries after removing\n",
     "count_entries(cleaned_data, \"BikeRides_Cleaned.csv\", False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1219,6 +1238,7 @@
     }
    ],
    "source": [
+    "#13\n",
     "check_NAN(cleaned_data, \"NaN_Percentages_Clean.csv\")"
    ]
   },
@@ -1231,74 +1251,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# converts seconds and days from deltatime into HH:MM:SS format\n",
+    "#14\n",
+    "# converts seconds from deltatime into HH:MM:SS format or DD days HH:MM:SS if days = True\n",
     "def format_time(seconds, days= False):\n",
     "    min, sec    = divmod(seconds, 60)\n",
     "    hour, min   = divmod(min, 60)\n",
     "\n",
     "    if days:\n",
     "        day, hour   = divmod(hour, 24)\n",
-    "        return '%d days %d:%02d:%02d' % (day, hour, min, sec)\n",
-    "    else:\n",
-    "        return '%d:%02d:%02d' % (hour, min, sec)"
+    "        if day == 1:\n",
+    "            return '%d day %d:%02d:%02d' % (day, hour, min, sec)\n",
+    "        elif day > 1:\n",
+    "            return '%d days %d:%02d:%02d' % (day, hour, min, sec)\n",
+    "    \n",
+    "    return '%d:%02d:%02d' % (hour, min, sec)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20 days 06:50:31\n",
-      "486:50:31\n",
-      "Tuesday\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = cleaned_data['May']\n",
-    "df['ride_length'] = (df['ended_at'] - df['started_at'])#.dt.seconds\n",
-    "#val = df['ride_length'].mean()\n",
-    "val = df['ride_length'].max()\n",
-    "print(val)\n",
-    "print(format_time(val.seconds, val.days))\n",
-    "print(df['day_of_week'].mode()[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#15\n",
+    "# add the columns ride_length and day_of_week\n",
     "def prepare_data(dataset):\n",
     "\n",
     "    for _, df in dataset.items():\n",
-    "        df.insert(len(df.columns), \"ride_length\", df.ended_at - df.started_at)\n",
-    "        df.insert(len(df.columns), \"day_of_week\", df.started_at.dt.day_name())\n",
-    "    \n",
+    "        if 'ride_length' not in df:\n",
+    "            df.insert(len(df.columns), \"ride_length\", df.ended_at - df.started_at)\n",
+    "        else: \n",
+    "            print(\"Column ride_length already exists\")\n",
+    "        \n",
+    "        if 'day_of_week' not in df:\n",
+    "            df.insert(len(df.columns), \"day_of_week\", df.started_at.dt.day_name())\n",
+    "        else: \n",
+    "            print(\"Column day_of_week already exists\")\n",
+    "        \n",
     "    return dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#16\n",
     "prepared_data = prepare_data(cleaned_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1505,65 +1514,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from statistics import mean, mode\n",
-    "\n",
-    "def statistics(dataset, file_name):\n",
-    "    with open(file_name, 'w', newline='') as file:\n",
-    "        writer = csv.writer(file)\n",
-    "        writer.writerow([\"Month\",\"Mean Ride Length\",\"Max Ride Length\", \"Day of Week Mode\"])\n",
-    "\n",
-    "        meanlist, maxlist, modelist = [], [], [] \n",
-    "\n",
-    "        for month, df in dataset.items():\n",
-    "            mean_i, max_i, mode_i = df['ride_length'].mean(), df['ride_length'].max(), df['day_of_week'].mode()[0]\n",
-    "            \n",
-    "            mean_i, max_i = mean_i.seconds+(mean_i.days*24*60*60), max_i.seconds+(max_i.days*24*60*60)\n",
-    "\n",
-    "            meanlist.append(mean_i)\n",
-    "            maxlist.append(max_i)\n",
-    "            modelist.append(mode_i)\n",
-    "            \n",
-    "            writer.writerow([month, format_time(mean_i), format_time(max_i, True), mode_i])\n",
-    "            print([month, format_time(mean_i), format_time(max_i, True), mode_i])\n",
-    "\n",
-    "        # we want to add the total statistics across whole year\n",
-    "        writer.writerow([\"\", \"\", \"\", \"\"])\n",
-    "        writer.writerow([\"Across whole year\", format_time(mean(meanlist)), format_time(max(maxlist), True), mode(modelist)])\n",
-    "        print([\"Total Year\", format_time(mean(meanlist)), format_time(max(maxlist), True), mode(modelist)])\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['January', '0:13:00', '23 days 8:03:44', 'Tuesday']\n",
-      "['February', '0:13:31', '13 days 2:25:46', 'Tuesday']\n",
-      "['March', '0:13:04', '11 days 16:08:04', 'Wednesday']\n",
-      "['April', '0:17:12', '12 days 18:35:29', 'Saturday']\n",
-      "['May', '0:19:02', '20 days 6:50:31', 'Tuesday']\n",
-      "['June', '0:19:59', '20 days 11:05:58', 'Friday']\n",
-      "['July', '0:21:44', '35 days 17:41:24', 'Saturday']\n",
-      "['August', '0:22:25', '68 days 9:29:04', 'Wednesday']\n",
-      "['September', '0:17:52', '1 days 1:07:46', 'Saturday']\n",
-      "['October', '0:15:41', '1 days 0:59:57', 'Tuesday']\n",
-      "['November', '0:13:49', '1 days 1:00:25', 'Thursday']\n",
-      "['Total Year', '0:17:01', '68 days 9:29:04', 'Tuesday']\n"
+      "Orig val:  20 days 06:50:31\n",
+      "Orig val seconds:  24631\n",
+      "Orig val seconds and days:  1752631\n",
+      "Formated val with seconds only:  6:50:31\n",
+      "Formated val with seconds, days together:  486:50:31\n",
+      "Formated val with seconds, days seperate:  20 days 6:50:31\n"
      ]
     }
    ],
    "source": [
+    "# testing of the method format_time\n",
+    "or_val = prepared_data[\"May\"].ride_length.max()\n",
+    "print(\"Orig val: \",or_val)\n",
+    "print(\"Orig val seconds: \",or_val.seconds)\n",
+    "print(\"Orig val seconds and days: \",or_val.seconds + or_val.days*24*60*60)\n",
+    "print(\"Formated val with seconds only: \",format_time(or_val.seconds))\n",
+    "print(\"Formated val with seconds, days together: \",format_time(or_val.seconds+or_val.days*24*60*60))\n",
+    "print(\"Formated val with seconds, days seperate: \",format_time(or_val.seconds+or_val.days*24*60*60, True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-112-d0390ebd9a27>, line 49)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-112-d0390ebd9a27>\"\u001b[0;36m, line \u001b[0;32m49\u001b[0m\n\u001b[0;31m    line =\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "#17\n",
+    "# if split: then calculate statistics based on member_casual\n",
+    "def statistics(dataset, file_name, split = False, split_into = ['all'], split_by = 'member_casual'):\n",
+    "\n",
+    "    with open(file_name, 'w', newline='') as file:\n",
+    "        writer = csv.writer(file)\n",
+    "\n",
+    "        statistics = {}\n",
+    "        operations = ['mean', 'max', 'mode']\n",
+    "        df_list = {}\n",
+    "\n",
+    "        if split:\n",
+    "            #  make a list with the values that we want to split into, and repeat it 3 times, bec mean, max and mode\n",
+    "            line = [splitter for splitter in split_into*3]\n",
+    "            # add empty entry in the begining for motnh\n",
+    "            line.insert(0, \"\")\n",
+    "            writer.writerow(line)\n",
+    "        else:\n",
+    "            writer.writerow([\"Month\",\"Mean Ride Length\",\"Max Ride Length\", \"Mode of Day of Week\"])\n",
+    "        \n",
+    "        for type in split_into:\n",
+    "            #statistics[type] = {'meanlist' : [], 'maxlist' : [], 'modelist' : []}\n",
+    "            statistics[type] = {op : [] for op in operations}\n",
+    "        \n",
+    "        print(statistics)\n",
+    "        return\n",
+    "        i = 0\n",
+    "        for month, df in dataset.items():\n",
+    "\n",
+    "            for type in split_into:\n",
+    "                # if split then filter df by rider type\n",
+    "                if split:\n",
+    "                    df_list[type] = df[df.split_by == type]\n",
+    "                else:\n",
+    "                    df_list[type] = df\n",
+    "                \n",
+    "                # get mean, max, mode \n",
+    "                mean_i, max_i, mode_i = df_list[type].ride_length.mean(), df_list[type].ride_length.max(), df_list[type].day_of_week.mode()[0] \n",
+    "                # convert mean and max into seconds\n",
+    "                mean_i, max_i = mean_i.seconds+(mean_i.days*24*60*60), max_i.seconds+(max_i.days*24*60*60)\n",
+    "\n",
+    "                # add each statistic to a list so that in the end we can find statistics across entire dataset\n",
+    "                statistics[type]['meanlist'].append(mean_i)\n",
+    "                statistics[type]['maxlist'].append(max_i)\n",
+    "                statistics[type]['modelist'].append(mode_i)\n",
+    "\n",
+    "            # write to file\n",
+    "            if split:\n",
+    "                line = \n",
+    "                writer.writerow([month, format_time(statistics['member']['meanlist'][i]), format_time(statistics['casual']['meanlist'][i]), \n",
+    "                                        format_time(statistics['member']['maxlist'][i], True), format_time(statistics['casual']['maxlist'][i], True), \n",
+    "                                        statistics['member']['modelist'][i], statistics['casual']['modelist'][i]\n",
+    "                                ])\n",
+    "                print([month, format_time(statistics['member']['meanlist'][i]), format_time(statistics['casual']['meanlist'][i]), \n",
+    "                                        format_time(statistics['member']['maxlist'][i], True), format_time(statistics['casual']['maxlist'][i], True), \n",
+    "                                        statistics['member']['modelist'][i], statistics['casual']['modelist'][i]\n",
+    "                                ])\n",
+    "            else:\n",
+    "                writer.writerow([month, format_time(mean_i), format_time(max_i, True), mode_i])\n",
+    "                print([month, format_time(mean_i), format_time(max_i, True), mode_i])    \n",
+    "\n",
+    "            i += 1\n",
+    "        \n",
+    "        # we want to add the total statistics across whole year\n",
+    "        writer.writerow([\"\"])\n",
+    "\n",
+    "        if split:\n",
+    "                writer.writerow([\"Across whole year\", \n",
+    "                             format_time(mean(statistics['member']['meanlist'])), format_time(mean(statistics['casual']['meanlist'])) ,\n",
+    "                             format_time(max(statistics['member']['maxlist']), True), format_time(max(statistics['casual']['maxlist']), True), \n",
+    "                             mode(statistics['member']['modelist']), mode(statistics['casual']['modelist'])])\n",
+    "                print([\"Across whole year\",format_time(mean(statistics['member']['meanlist'])), format_time(mean(statistics['casual']['meanlist'])) ,format_time(max(statistics['member']['maxlist']), True), format_time(max(statistics['casual']['maxlist']), True), mode(statistics['member']['modelist']), mode(statistics['casual']['modelist'])])\n",
+    "        else:\n",
+    "            writer.writerow([\"Across whole year\", \n",
+    "                             format_time(mean(statistics['all']['meanlist'])), \n",
+    "                             format_time(max(statistics['all']['maxlist']), True), \n",
+    "                             mode(statistics['all']['modelist'])])\n",
+    "            print([\"Across whole year\", format_time(mean(statistics['all']['meanlist'])), format_time(max(statistics['all']['maxlist']), True),mode(statistics['all']['modelist'])])\n",
+    "        \n",
+    "        return\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#19\n",
+    "# for dataset split into memeber and casual\n",
+    "statistics(prepared_data, \"Mean_Max_Mode_split.csv\", True, split_into = ['member', 'casual'], split_by = 'member_casual')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#18\n",
+    "# for entire dataset without splitting\n",
     "statistics(prepared_data, \"Mean_Max_Mode.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
